--- a/starter/04-CSS-Layouts/flexbox.html
+++ b/starter/04-CSS-Layouts/flexbox.html
@@ -36,10 +36,49 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 40px;
+        font-size: 30px;
         margin: 40px;
 
         /* FLEXBOX */
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 10px;
+      }
+
+      .el {
+        /* flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: auto; */
+
+        /* flex-basis: 100px; */
+        flex-shrink: 1;
+        /* flex-grow: 1; */
+        flex: 1;
+      }
+
+      .el--1 {
+        align-self: flex-start;
+        order: 2;
+        /* flex-grow: 1; */
+      }
+
+      .el--2 {
+      }
+
+      .el--4 {
+      }
+
+      .el--5 {
+        align-self: stretch;
+        order: 1;
+      }
+
+      .el--6 {
+        order: -1;
+      }
+
+      .el--8 {
       }
     </style>
   </head>
